# Address_book

./: .gitignore  README.md  main.py  pyproject.toml
src/: AddressBook.py  Assistant_bot.py  file_parser.py  game.py  get_weather_module.py  main_sort.py  normalize.py  validate.py
